position select list and fix responsive layout issue.

--- a/css/main.css
+++ b/css/main.css
@@ -40,20 +40,27 @@ body {
 	z-index: 1;
 }
 
-.collapseOne {
+#collapseOne {
 	position: fixed;
 	background-color: #b3e5fc;
 	overflow: scroll;
 	top: 60px;
-	right: -30%;
-	width: 30%;
-	height: 80%;
+	right: -55vw;
+	width: 30vw;
+	height: 75vh;
+	min-width: 200px;
 	padding-left: 1%;
 	padding-right: 1%;
 	z-index: 1;
-	-webkit-transition: right 2s;
-	-moz-transition: right 2s;
-	transition: right 2s;
+	-webkit-transition: all 3s;
+	-moz-transition: all 3s;
+	transition: all 3s;
+}
+
+#collapseOne.active {
+	-webkit-transform: translateX(-56vw);
+	-moz-transform: translateX(-56vw);
+	transform: translateX(-56vw);
 }
 
 .eachPlace:hover {
@@ -64,15 +71,16 @@ body {
 	position: fixed;
 	left: 1%;
 	bottom: 5px;
-	width: 10%;
-	height: 15%;
+	width: 10vw;
+	height: 15vh;
 	min-width: 150px;
 	min-height: 200px;
 	z-index: 1;
 }
 
 .popover {
-	width: 300px;
+	width: 100vw;
+	min-width: 185px;
 	z-index: 900;
 }
 
@@ -84,66 +92,47 @@ body {
 	color: red;
 }
 
-@media (max-width: 558px) {
+.searchBox {
+	position: fixed;
+	z-index: 1;
+	min-width: 390px;
+	padding: 5px;
+	background: orange;
+}
+
+.searchBox > .functionSelector {
+	width: 5vw;
+	min-width: 90px;
+}
+
+.searchBox > .searchField {
+	width: 15vw;
+	min-width: 230px;
+}
+
+.infoWindowContent{
+	width: 45vw;
+	height: 25vh;
+}
+
+@media (max-width: 740px) {
+	h2 {
+		font-size: 15px;
+	}
+
 	.chart_div {
 		visibility: hidden;
 	}
 
 	.searchBox {
-		position: fixed;
 		bottom: 5px;
 		left: 5px;
-		width: 300px;
-		z-index: 1;
-	}
-
-	.infoWindowContent {
-		max-width: 150px;
-		max-height: 130px;
 	}
 }
 
-@media (min-width: 558px) {
-	.infoWindowContent {
-		max-width: 150px;
-		max-height: 130px;
-	}
-
+@media (min-width: 740px) {
 	.searchBox {
-		position: fixed;
 		top: 5px;
-		left: 65px;
-		width: 300px;
-		z-index: 1;
-	}
-}
-
-@media (min-width: 655px) {
-	.infoWindowContent {
-		max-width: 230px;
-		max-height: 130px;
-	}
-
-	.searchBox {
-		position: fixed;
-		top: 5px;
-		left: 17%;
-		width: 300px;
-		z-index: 1;
-	}
-}
-
-@media (min-width: 1021px) {
-	.infoWindowContent {
-		max-width: 300px;
-		max-height: 130px;
-	}
-
-	.searchBox {
-		position: fixed;
-		top: 5px;
-		left: 17%;
-		width: 300px;
-		z-index: 1;
+		left: 20%;
 	}
 }
